Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10764

Web UI shows error in the /logs page, if stdout/stderr is not redirected to INFO/ERROR logs

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.1.0
    • None
    • None
    • ghx-label-5

    Description

      The error message looks like this: 

      Error: Couldn't open INFO log file <log_location>/statestored.INFO

      We should probably hide the /logs page in the Web UI if stdout/stderr is not redirected to INFO/ERROR logs

      Attachments

        Activity

          People

            asherman Andrew Sherman
            arawat Abhishek Rawat
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: